--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
   "dependencies": {
     "mocha": "^1.21.4",
     "request": "^2.40.0",
-    "seneca-beanstalk-transport": "^0.1.1",
-    "seneca-redis-transport": "^0.1.1"
+    "seneca-beanstalk-transport": "0.2.1",
+    "seneca-redis-transport": "0.3.0"
   },
   "devDependencies": {
-    "seneca": "^0.5.20"
+    "seneca": "0.6.1"
   }
 }
